# Agent_Audit_Secu_SI

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  docker-compose.prod-fronted.yml  docker-compose.prod-ip.yml  docker-compose.prod.yml  docker-compose.scale.yml  docker-compose.suricata.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
agent/: .gitignore  Cargo.toml  Dockerfile  agent.toml.example
agent/data/: .gitignore  agent.toml.example
agent/packaging/: guardianops-agent.service  install.sh
agent/src/: collector.rs  config.rs  main.rs  netscan.rs  queue.rs  snmp.rs  state.rs  transport.rs
apps/api/: .dockerignore  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_machine_hostname_nullable.py  0007_snmp_interfaces.py
apps/api/app/: cli.py  deps.py  main.py
apps/api/app/core/: config.py  db.py  ratelimit.py  redis.py  security.py
apps/api/tests/: test_alerting.py  test_anomaly.py  test_auth_ratelimit_wiring.py  test_ingestion.py  test_ratelimit.py  test_read_endpoints.py  test_security.py  test_snmp.py
apps/web/: .dockerignore  Dockerfile  Dockerfile.prod  eslint.config.mjs  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/components/: health-badge.tsx  logo.tsx  network-state.tsx  theme.tsx
apps/web/lib/: api.ts  auth.ts  types.ts  ws.ts
docs/: architecture.md  runbook.md
infra/caddy/: Caddyfile  Caddyfile.ip
(+35 files in other folders)
