[package]
name = "guardianops-agent"
version = "0.1.0"
edition = "2021"
description = "GuardianOps AI — agent de collecte système"

[dependencies]
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.12", features = ["json"] }
sysinfo     = "0.31"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono      = { version = "0.4", features = ["serde"] }
ipnet       = "2"
if-addrs    = "0.13"
dns-lookup  = "2"
csnmp       = "0.6"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
